불필요파일삭제+TOC 생성

--- a/_posts/2018-07-01-welcome.md
+++ b/_posts/2018-07-01-welcome.md
@@ -1,18 +1,9 @@
 ---
 tags: TeXt
 layout: article
-title: 페이지 레이아웃 테스트
+title: welcome 2 - 테마 속성만 입힌 것
 subtitle: 지킬블로그 설치하기 어렵다 지킬블로그 설치하기 어렵다
-article_header:
-  type: overlay
-  theme: dark
-  background_color: '#203028'
-  background_image:
-    gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
-    src: /docs/assets/images/cover3.jpg
 ---
-
-
 
 If you see this page, that means you have setup your site. enjoy! :ghost: :ghost: :ghost:
 
