--- a/_posts/2020-03-01-highhigh.md
+++ b/_posts/2020-03-01-highhigh.md
@@ -4,12 +4,9 @@ layout: article
 title: 페이지 레이아웃 테스트
 subtitle: 지킬블로그 설치하기 어렵다 지킬블로그 설치하기 어렵다
 article_header:
-  type: overlay
-  theme: dark
-  background_color: '#203028'
   background_image:
     gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
-    src: /docs/assets/images/cover3.jpg
+    src: /assets/images/cover3.jpg
 ---
 
 
